--- a/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
+++ b/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="SuaCuaHang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SuaCuaHang.Designer.cs">
+      <DependentUpon>SuaCuaHang.cs</DependentUpon>
     </Compile>
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
@@ -83,8 +83,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QuanLyChuoiCuaHang2DataSet.xsd</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="SuaCuaHang.resx">
+      <DependentUpon>SuaCuaHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
