--- a/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
+++ b/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
@@ -46,17 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NgQuanLy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NgQuanLy.Designer.cs">
+      <DependentUpon>NgQuanLy.cs</DependentUpon>
+    </Compile>
     <Compile Include="SuaCuaHang.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SuaCuaHang.Designer.cs">
       <DependentUpon>SuaCuaHang.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="CuaHang.cs">
       <SubType>Form</SubType>
@@ -83,11 +83,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QuanLyChuoiCuaHang2DataSet.xsd</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="NgQuanLy.resx">
+      <DependentUpon>NgQuanLy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SuaCuaHang.resx">
       <DependentUpon>SuaCuaHang.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CuaHang.resx">
       <DependentUpon>CuaHang.cs</DependentUpon>
