--- a/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
+++ b/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BUS_CuaHang.cs" />
     <Compile Include="BUS_kho.cs" />
     <Compile Include="BUS_NgQuanLy.cs" />
+    <Compile Include="BUS_SPTonkho.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BUS_Uses.cs" />
   </ItemGroup>
