--- a/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
+++ b/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BUS_CuaHang.cs" />
+    <Compile Include="BUS_HDBan.cs" />
     <Compile Include="BUS_kho.cs" />
     <Compile Include="BUS_NgQuanLy.cs" />
+    <Compile Include="BUS_SP.cs" />
     <Compile Include="BUS_SPTonkho.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BUS_Uses.cs" />
