--- a/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
+++ b/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
@@ -44,7 +44,10 @@
     <Compile Include="BUS_CuaHang.cs" />
     <Compile Include="BUS_HDBan.cs" />
     <Compile Include="BUS_kho.cs" />
+    <Compile Include="BUS_LoaiSP.cs" />
     <Compile Include="BUS_NgQuanLy.cs" />
+    <Compile Include="BUS_NhaCC.cs" />
+    <Compile Include="BUS_NhomSP.cs" />
     <Compile Include="BUS_SP.cs" />
     <Compile Include="BUS_SPTonkho.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
