--- a/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
+++ b/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
@@ -44,7 +44,10 @@
     <Compile Include="DAL_CuaHang.cs" />
     <Compile Include="DAL_HDban.cs" />
     <Compile Include="DAL_kho.cs" />
+    <Compile Include="DAL_LoaiSP.cs" />
     <Compile Include="DAL_NgQuanLy.cs" />
+    <Compile Include="DAL_NhaCC.cs" />
+    <Compile Include="DAL_NhomSP.cs" />
     <Compile Include="DAL_SanPham.cs" />
     <Compile Include="DAL_SPTonkhocs.cs" />
     <Compile Include="DBConnect.cs" />
