--- a/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
+++ b/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DAL_LoaiSP.cs" />
     <Compile Include="DAL_NgQuanLy.cs" />
     <Compile Include="DAL_NhaCC.cs" />
+    <Compile Include="DAL_NhanVien.cs" />
     <Compile Include="DAL_NhomSP.cs" />
     <Compile Include="DAL_SanPham.cs" />
     <Compile Include="DAL_SPTonkhocs.cs" />
