--- a/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
+++ b/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DAL_CTHDBan.cs" />
     <Compile Include="DAL_CuaHang.cs" />
     <Compile Include="DAL_HDban.cs" />
+    <Compile Include="DAL_KhachHang.cs" />
     <Compile Include="DAL_kho.cs" />
     <Compile Include="DAL_LoaiSP.cs" />
     <Compile Include="DAL_NgQuanLy.cs" />
