--- a/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
+++ b/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BUS_CTHDBan.cs" />
     <Compile Include="BUS_CuaHang.cs" />
     <Compile Include="BUS_HDBan.cs" />
+    <Compile Include="BUS_HDNhapKho.cs" />
     <Compile Include="BUS_KhachHang.cs" />
     <Compile Include="BUS_kho.cs" />
     <Compile Include="BUS_LoaiSP.cs" />
