--- a/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
+++ b/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DAL_CuaHang.cs" />
     <Compile Include="DAL_HDban.cs" />
     <Compile Include="DAL_HDNhapKho.cs" />
+    <Compile Include="DAL_HDXuatKho.cs" />
     <Compile Include="DAL_KhachHang.cs" />
     <Compile Include="DAL_kho.cs" />
     <Compile Include="DAL_LoaiSP.cs" />
