--- a/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
+++ b/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
@@ -82,6 +82,12 @@
     <Compile Include="CuaHang.Designer.cs">
       <DependentUpon>CuaHang.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sua_KhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sua_KhachHang.Designer.cs">
+      <DependentUpon>Sua_KhachHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sua_Kho.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CuaHang.resx">
       <DependentUpon>CuaHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Sua_KhachHang.resx">
+      <DependentUpon>Sua_KhachHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sua_Kho.resx">
       <DependentUpon>Sua_Kho.cs</DependentUpon>
