--- a/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
+++ b/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChonSP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChonSP.Designer.cs">
+      <DependentUpon>ChonSP.cs</DependentUpon>
+    </Compile>
     <Compile Include="DAL_CTHDBan.cs" />
     <Compile Include="DAL_CTHDNhapKho.cs" />
     <Compile Include="DAL_CuaHang.cs" />
@@ -59,6 +67,11 @@
     <Compile Include="DBConnect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Uses.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ChonSP.resx">
+      <DependentUpon>ChonSP.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
