--- a/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
+++ b/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
@@ -55,7 +55,7 @@
     <Compile Include="BUS_NhanVien.cs" />
     <Compile Include="BUS_NhomSP.cs" />
     <Compile Include="BUS_SP.cs" />
-    <Compile Include="BUS_SPTonkho.cs" />
+    <Compile Include="BUS_SPTonCH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BUS_Uses.cs" />
   </ItemGroup>
