--- a/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
+++ b/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
@@ -63,7 +63,7 @@
     <Compile Include="DAL_NhanVien.cs" />
     <Compile Include="DAL_NhomSP.cs" />
     <Compile Include="DAL_SanPham.cs" />
-    <Compile Include="DAL_SPTonkhocs.cs" />
+    <Compile Include="DAL_SPTonCH.cs" />
     <Compile Include="DBConnect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Uses.cs" />
