--- a/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
+++ b/QuanLyChuoiCH.View/QuanLyChuoiCH.View.csproj
@@ -82,12 +82,25 @@
     <Compile Include="NhaCC.Designer.cs">
       <DependentUpon>NhaCC.cs</DependentUpon>
     </Compile>
+    <Compile Include="NhapKho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NhapKho.Designer.cs">
+      <DependentUpon>NhapKho.cs</DependentUpon>
+    </Compile>
     <Compile Include="NhomSP.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NhomSP.Designer.cs">
       <DependentUpon>NhomSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="QuanLy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLy.Designer.cs">
+      <DependentUpon>QuanLy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuanLyChuoiCH\BUS\BUS_HDBan.cs" />
     <Compile Include="SanPham.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -233,8 +246,14 @@
     <EmbeddedResource Include="NhaCC.resx">
       <DependentUpon>NhaCC.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NhapKho.resx">
+      <DependentUpon>NhapKho.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NhomSP.resx">
       <DependentUpon>NhomSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuanLy.resx">
+      <DependentUpon>QuanLy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SanPham.resx">
       <DependentUpon>SanPham.cs</DependentUpon>
