--- a/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
+++ b/QuanLyChuoiCH.BUS/QuanLyChuoiCH.BUS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BUS_CTHDBan.cs" />
     <Compile Include="BUS_CTHDNhapKho.cs" />
+    <Compile Include="BUS_CTHDXuatKho.cs" />
     <Compile Include="BUS_CuaHang.cs" />
     <Compile Include="BUS_HDBan.cs" />
     <Compile Include="BUS_HDNhapKho.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="BUS_NhomSP.cs" />
     <Compile Include="BUS_SP.cs" />
     <Compile Include="BUS_SPTonCH.cs" />
+    <Compile Include="BUS_SPTonKho.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BUS_Uses.cs" />
   </ItemGroup>
