--- a/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
+++ b/QuanLyChuoiCH.DAL/QuanLyChuoiCH.DAL.csproj
@@ -43,14 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChonSP.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ChonSP.Designer.cs">
-      <DependentUpon>ChonSP.cs</DependentUpon>
-    </Compile>
     <Compile Include="DAL_CTHDBan.cs" />
     <Compile Include="DAL_CTHDNhapKho.cs" />
+    <Compile Include="DAL_CTHDXuatKho.cs" />
     <Compile Include="DAL_CuaHang.cs" />
     <Compile Include="DAL_HDban.cs" />
     <Compile Include="DAL_HDNhapKho.cs" />
@@ -64,14 +59,10 @@
     <Compile Include="DAL_NhomSP.cs" />
     <Compile Include="DAL_SanPham.cs" />
     <Compile Include="DAL_SPTonCH.cs" />
+    <Compile Include="DAL_SPTonKho.cs" />
     <Compile Include="DBConnect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Uses.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="ChonSP.resx">
-      <DependentUpon>ChonSP.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
